PP-8125 Worldpay payment provider - getCredentials by provider name
- Get gateway account credentials for Worldpay operations by provider name.